# AI-Engineering-Lab

projects/sindhi-rag-translator/: .env  README.md  init_db.py  main.py  pyproject.toml  test_rag.py
projects/sindhi-rag-translator/scripts/: evalute_dataset.py  seed_phonetics.py
projects/sindhi-rag-translator/src/ai/: refiner.py
projects/sindhi-rag-translator/src/core/: mapping.py
projects/sindhi-rag-translator/src/db/: database.py
projects/sindhi-rag-translator/src/logic/: transliterate.py
projects/sindhi-rag-translator/src/rag/: retriever.py
projects/sindhi-rag-translator/src/script/: import_csv.py
projects/sindhi-rag-translator/src/ui/: chat_app.py
